# PhotoPrint

./: .gitignore  CMakeLists.txt  PhotoPrint.cpp  SerialTest.cpp
PhotoPrintControlller_ArduinoESP32/: platformio.ini
PhotoPrintControlller_ArduinoESP32/src/: main.cpp  main_slave.cpp
arduino_test/: arduino_test.ino
devices/: Arduino.hpp  ArduinoNanoESP32.hpp  BX3SSU.hpp  Serial.hpp
windows/: PhotoPrint.rc  icon_source.xcf
